FIX UX interactive match -> change z-index flash messages and some details in frontend.

--- a/frontend/src/assets/sass/layout/_timer.scss
+++ b/frontend/src/assets/sass/layout/_timer.scss
@@ -1,6 +1,9 @@
 .clock {
   text-align: center;
-  margin-bottom: 30px;
+  position: fixed;
+  right: 8px;
+  top: 68px;
+  z-index: 1000;
 
   .column:first-child {
     margin-right: 30px;
@@ -8,15 +11,15 @@
 
   .column {
     display: inline-block;
-    width: 12%;
+    width: 45%;
 
     .timer {
       font-family: Proxima, Arial, sans-serif;
-      font-size: 65px;
+      font-size: 45px;
       font-weight: bold;
       display: inline-block;
       vertical-align: top;
-      width: 130px;
+      width: 100px;
       color: white;
       letter-spacing: 6px;
       background: black;
@@ -33,38 +36,12 @@
 }
 
 @media (max-width: 1200px) {
-  .clock .column {
-    width: 15%;
-  }
-
   .clock .column:first-child {
     margin-right: 16px;
   }
 }
 
-@media (max-width: 993px) {
-  .clock .column {
-    width: 20%;
-  }
-}
-
-@media (max-width: 768px) {
-  .clock .column {
-    width: 28%;
-  }
-}
-
-@media (max-width: 500px) {
-  .clock .column {
-    width: 35%;
-  }
-}
-
 @media (max-width: 400px) {
-  .clock .column {
-    width: 45%;
-  }
-
   .clock .column:first-child {
     margin-right: 15px;
   }
